--- a/src/design-sections/parallax/styles.module.css
+++ b/src/design-sections/parallax/styles.module.css
@@ -7,7 +7,7 @@
   position: sticky;
   top: 0px;
   height: 100vh;
-  background-color: orange;
+  overflow: hidden;
 }
 
 .el {
@@ -24,4 +24,38 @@
   width: 25vw;
   height: 25vh;
   position: relative;
+}
+
+.el:nth-of-type(1) > .imgContainer {
+  top: 0;
+  left: 40vw;
+  width: 25vw;
+  height: 25vh;
+}
+
+.el:nth-of-type(2) > .imgContainer {
+  top: -30vh;
+  left: 5vw;
+  width: 35vw;
+  height: 30vh;
+}
+
+.el:nth-of-type(3) > .imgContainer {
+  top: -10vh;
+  left: -25vw;
+  width: 20vw;
+  height: 45vh;
+}
+
+.el:nth-of-type(4) > .imgContainer {
+  left: 27vh;
+  width: 25vw;
+  height: 25vh;
+}
+
+.el:nth-of-type(5).imgContainer {
+  top: 27vh;
+  left: 5vw;
+  width: 20vw;
+  height: 25vh;
 }
