--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: 'Questrial', sans-serif;
+  font-family: 'InputMono', 'Questrial', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
